# ecriptus

./: CMakeLists.txt  build.sh  run.sh
include/: rs_func.h  u_common.h
rust/: Cargo.toml  build.rs
rust/go/: .gitignore  go.mod
rust/go/src/: main.go
rust/src/: c_func.rs  lib.rs  root.rs
rust/zig/: build.zig
rust/zig/src/: main.zig
src/: main.c  u_common.c
