[package]
name = "ecriptus-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "src/root.rs"

[dependencies]

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
panic = "abort"
lto = "fat"
debug-assertions = false
incremental = false

[target.x86_64-unknown-linux-gnu]
linker = "rust-lld"
rustflags = ["-C", "link-args=-L/zig/zig-out/lib", "-lutils_zig"]